objects/Product_Upgrade_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Upgrade Requests</relationshipLabel>
        <relationshipName>Product_Upgrade_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_APN_Number__c</fullName>
        <formula>Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product APN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Upgrade Requests</relationshipLabel>
        <relationshipName>Product_Upgrade_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Version</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Upgrade Request</label>
    <listViews>
        <fullName>Account_Specific_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Processed__c</columns>
        <columns>Product__c</columns>
        <columns>Product_APN_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>startsWith</operation>
            <value>Lansforsakringar Vasterbotten</value>
        </filters>
        <label>Account Specific View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>State of Utah</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PUR-{000000}</displayFormat>
        <label>Request#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Upgrade Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>